@@ -1,5 +1,6 @@
 version 0.75.01
 	Support for K-r added by Vincenc Podobnik <vincenc.podobnik@gmail.com>
+	Better bracket ev handling for K-x
 
 version 0.75.00 ( 2011-06-26 )
 	buffer window bugfixes
